# aivi2

./: .gitignore  .mcp.json  AGENTS.md  AIVI_RFC.md  CODE_REVIEW.md  Cargo.toml  aivi.md  choices_made.md  claude.sh  code_review.md  gaps.md  install-vscode.sh  install.sh  plan.md  scratch_b0.aivi  scratch_fmtcheck.aivi  scratch_m1.aivi  scratch_m2.aivi  scratch_m3.aivi  scratch_m4.aivi  scratch_m5.aivi  scratch_m6.aivi  scratch_m7.aivi  scratch_m8.aivi  scratch_m9.aivi  scratch_tc2.aivi  scratch_tc3.aivi  scratch_tc4.aivi  scratch_tc5.aivi  scratch_tc6.aivi  scratch_tc7.aivi  scratch_test.aivi  skills-lock.json  syntax.md  test_snake_items.rs  todo.md
benches/: Cargo.toml
benches/benches/: parser.rs  typecheck.rs
crates/aivi-backend/: Cargo.toml
crates/aivi-backend/src/: cache.rs  codegen.rs  engine.rs  gc.rs  jit.rs  kernel.rs  layout.rs  lib.rs  lower.rs  numeric.rs  program.rs  runtime.rs  validate.rs
crates/aivi-backend/tests/: debug_reversi.rs  execution_engine.rs  foundations.rs
crates/aivi-cli/: Cargo.toml  README.md
crates/aivi-cli/src/: main.rs  manual_snippets.rs  mcp.rs  run_session.rs
crates/aivi-cli/tests/: build.rs  check.rs  compile.rs  fmt.rs  help.rs  manual_snippets.rs  snake_fixture.rs  test.rs
crates/aivi-gtk/: Cargo.toml
crates/aivi-gtk/src/: bridge.rs  executor.rs  host.rs  lib.rs  lower.rs  plan.rs  runtime_adapter.rs  schema.rs
crates/aivi-gtk/tests/: lowering.rs
crates/aivi-hir/: Cargo.toml
crates/aivi-hir/examples/: snake_items.rs
crates/aivi-hir/src/: capability_handle_elaboration.rs  codes.rs  custom_source_capabilities.rs  decode_elaboration.rs  decode_generation.rs  domain_operator_elaboration.rs  exports.rs  fanout_elaboration.rs  function_inference.rs  gate_elaboration.rs  general_expr_elaboration.rs  hir.rs  lib.rs  lower.rs  recurrence_elaboration.rs  resolver.rs  resource_signal_elaboration.rs  sequence.rs  signal_metadata_elaboration.rs  source_contract_resolution.rs  source_lifecycle_elaboration.rs  symbols.rs  temporal_elaboration.rs  test_support.rs  truthy_falsy_elaboration.rs  type_analysis.rs  typecheck.rs  typecheck_context.rs  typed_declarations.rs  validate.rs
crates/aivi-hir/tests/: db_sources.rs  patch_typecheck.rs  record_features.rs  selected_subject_sugar.rs  stack_depth.rs
crates/aivi-lsp/: Cargo.toml
crates/aivi-lsp/src/: analysis.rs  code_actions.rs  code_lens.rs  completion.rs  definition.rs  diagnostics.rs  documents.rs  formatting.rs  hover.rs  implementation.rs  inlay_hints.rs  lib.rs  navigation.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  state.rs  symbols.rs  type_annotations.rs  unused.rs
crates/aivi-lsp/tests/: lsp_basic.rs  lsp_formatting.rs  lsp_hover.rs  lsp_inlay_hints.rs  lsp_navigation.rs  lsp_references.rs  lsp_symbols.rs
crates/aivi-openapi/: Cargo.toml
crates/aivi-openapi/src/: auth.rs  diagnostics.rs  lib.rs  model.rs  operations.rs  parser.rs  resolver.rs  typegen.rs
crates/aivi-query/: Cargo.toml  README.md  build.rs
crates/aivi-query/src/: db.rs  entry.rs  inputs.rs  lib.rs  manifest.rs  workspace.rs
crates/aivi-query/tests/: backend_foundations.rs  database.rs  entrypoint.rs
crates/aivi-runtime/: Cargo.toml
crates/aivi-runtime/src/: effects.rs  glib_adapter.rs  graph.rs  hir_adapter.rs  lib.rs  providers.rs  reactive_program.rs  runtime_errors.rs  scheduler.rs  source_decode.rs  source_map.rs  startup.rs  task_executor.rs
crates/aivi-runtime/test-scratch/: aivi-runtime-glib-db-live-primary-117165-1776231165134887847.sqlite  aivi-runtime-glib-db-live-secondary-189342-1776276704450025203.sqlite
crates/aivi-runtime/tests/: db_sources.rs  window_key_recurrence.rs
fuzz/: Cargo.toml
fuzz/corpus/decoder_paths/: fixtures__frontend__milestone-1__invalid__source_unknown_option.aivi  fixtures__frontend__milestone-1__valid__sources__source_declarations.aivi  fixtures__frontend__milestone-2__invalid__custom-source-provider-argument-count-mismatch__main.aivi  fixtures__frontend__milestone-2__invalid__custom-source-provider-argument-type-mismatch__main.aivi  fixtures__frontend__milestone-2__invalid__custom-source-provider-unknown-option__main.aivi  fixtures__frontend__milestone-2__invalid__custom-source-provider-unsupported-schema-type__main.aivi  fixtures__frontend__milestone-2__invalid__request-recurrence-missing-wakeup__main.aivi  fixtures__frontend__milestone-2__invalid__source-contract-arity-mismatch__main.aivi  fixtures__frontend__milestone-2__invalid__source-contract-missing-type__main.aivi  fixtures__frontend__milestone-2__invalid__source-decorator-non-signal__main.aivi  fixtures__frontend__milestone-2__invalid__source-option-constructor-application-mismatch__main.aivi  fixtures__frontend__milestone-2__invalid__source-provider-without-variant__main.aivi  fixtures__frontend__milestone-2__valid__custom-source-provider-wakeup__main.aivi  fixtures__frontend__milestone-2__valid__source-decorator-signals__main.aivi  fixtures__frontend__milestone-2__valid__source-option-constructor-applications__main.aivi  fixtures__frontend__milestone-2__valid__source-option-contract-parameter-context-free-builtins__main.aivi
fuzz/corpus/parser_lossless/: fixtures__frontend__milestone-1__invalid__cluster_unfinished_gate.aivi  fixtures__frontend__milestone-1__invalid__each_missing_key.aivi  fixtures__frontend__milestone-1__invalid__gate_non_list.aivi  fixtures__frontend__milestone-1__invalid__markup_mismatched_close.aivi  fixtures__frontend__milestone-1__invalid__pattern_non_exhaustive_sum.aivi  fixtures__frontend__milestone-1__invalid__record_missing_required_field.aivi  fixtures__frontend__milestone-1__invalid__regex_bad_pattern.aivi  fixtures__frontend__milestone-1__invalid__val_depends_on_sig.aivi  fixtures__frontend__milestone-1__valid__decorators__attached_forms.aivi  fixtures__frontend__milestone-1__valid__formatting__class_eq_layout.aivi  fixtures__frontend__milestone-1__valid__formatting__domain_layout.aivi  fixtures__frontend__milestone-1__valid__formatting__markup_layout.aivi  fixtures__frontend__milestone-1__valid__formatting__pipe_alignment.aivi  (+90 more)
(+605 files in other folders)
