[workspace]
members = [
    "crates/aivi-base",
    "crates/aivi-hir",
    "crates/aivi-syntax",
    "crates/aivi-cli",
    "crates/aivi-typing",
    "crates/aivi-query",
    "crates/aivi-lsp",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.85"

[workspace.dependencies]
aivi-base = { path = "crates/aivi-base" }
aivi-hir = { path = "crates/aivi-hir" }
aivi-syntax = { path = "crates/aivi-syntax" }
aivi-typing = { path = "crates/aivi-typing" }
aivi-query = { path = "crates/aivi-query" }
aivi-lsp = { path = "crates/aivi-lsp" }
regex-syntax = "0.8.10"

[workspace.lints.rust]
unsafe_code = "forbid"
