[workspace]
members = [
    "crates/aivi-base",
    "crates/aivi-ffi-call",
    "crates/aivi-core",
    "crates/aivi-lambda",
    "crates/aivi-hir",
    "crates/aivi-openapi",
    "crates/aivi-runtime",
    "crates/aivi-gtk",
    "crates/aivi-backend",
    "crates/aivi-syntax",
    "crates/aivi-cli",
    "crates/aivi-typing",
    "crates/aivi-query",
    "crates/aivi-lsp",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
rust-version = "1.94.1"

[workspace.dependencies]
aivi-base = { path = "crates/aivi-base" }
aivi-hir = { path = "crates/aivi-hir" }
aivi-lambda = { path = "crates/aivi-lambda" }
aivi-openapi = { path = "crates/aivi-openapi" }
aivi-syntax = { path = "crates/aivi-syntax" }
aivi-typing = { path = "crates/aivi-typing" }
aivi-query = { path = "crates/aivi-query" }
aivi-lsp = { path = "crates/aivi-lsp" }
insta = { version = "1", features = ["ron"] }
regex-syntax = "0.8.10"
rustc-hash = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
