[package]
name = "aivi-backend"
version.workspace = true
edition.workspace = true
rust-version = "1.89"

[dependencies]
aivi-base.workspace = true
aivi-core = { path = "../aivi-core" }
aivi-hir.workspace = true
aivi-lambda.workspace = true
aivi-typing.workspace = true
cranelift-codegen = "0.127.4"
cranelift-frontend = "0.127.4"
cranelift-module = "0.127.4"
cranelift-native = "0.127.4"
cranelift-object = "0.127.4"
num-bigint = "0.4.6"
rust_decimal = "1.40.0"

[dev-dependencies]
aivi-query.workspace = true
aivi-syntax.workspace = true

[lints]
workspace = true
