[package]
name = "aivi-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-core = { path = "../aivi-core" }
aivi-hir.workspace = true
aivi-lambda.workspace = true
aivi-typing.workspace = true
cranelift-codegen = "0.130.0"
cranelift-frontend = "0.130.0"
cranelift-module = "0.130.0"
cranelift-native = "0.130.0"
cranelift-object = "0.130.0"
indexmap = "2"
num-bigint = "0.4.6"
num-traits = "0.2"
rayon = "1"
rust_decimal = "1.40.0"
rustc-hash.workspace = true

[dev-dependencies]
aivi-query.workspace = true
aivi-syntax.workspace = true

[lints]
workspace = true
