[package]
name = "aivi-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-ffi-call = { path = "../aivi-ffi-call" }
aivi-base.workspace = true
aivi-core = { path = "../aivi-core" }
aivi-hir.workspace = true
aivi-lambda.workspace = true
aivi-typing.workspace = true
bincode.workspace = true
cranelift-codegen = "0.130.0"
cranelift-frontend = "0.130.0"
cranelift-jit = "0.130.0"
cranelift-module = "0.130.0"
cranelift-native = "0.130.0"
cranelift-object = "0.130.0"
indexmap = { version = "2", features = ["serde"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2"
rayon = "1"
rust_decimal = { version = "1.40.0", features = ["serde"] }
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
aivi-query.workspace = true
aivi-syntax.workspace = true

[lints]
workspace = true
