[package]
name = "aivi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-hir.workspace = true
aivi-syntax.workspace = true
aivi-lsp = { path = "../aivi-lsp" }
tokio = { version = "1", features = ["rt"] }

[[bin]]
name = "aivi"
path = "src/main.rs"

[lints]
workspace = true
