[package]
name = "aivi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-backend = { path = "../aivi-backend" }
aivi-core = { path = "../aivi-core" }
aivi-gtk = { path = "../aivi-gtk" }
aivi-hir.workspace = true
aivi-lambda = { path = "../aivi-lambda" }
aivi-runtime = { path = "../aivi-runtime" }
aivi-syntax.workspace = true
aivi-lsp = { path = "../aivi-lsp" }
gtk = { package = "gtk4", version = "0.9.5" }
tokio = { version = "1", features = ["rt", "sync"] }

[[bin]]
name = "aivi"
path = "src/main.rs"

[lints]
workspace = true
