[package]
name = "aivi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-backend = { path = "../aivi-backend" }
aivi-core = { path = "../aivi-core" }
aivi-gtk = { path = "../aivi-gtk" }
aivi-hir.workspace = true
aivi-lambda = { path = "../aivi-lambda" }
aivi-openapi.workspace = true
aivi-query.workspace = true
aivi-runtime = { path = "../aivi-runtime" }
aivi-syntax.workspace = true
aivi-lsp = { path = "../aivi-lsp" }
bincode.workspace = true
gtk = { package = "gtk4", version = "0.11.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "sync"] }
webkit6 = "0.6.1"

[[bin]]
name = "aivi"
path = "src/main.rs"

[lints]
workspace = true
