[package]
name = "aivi-gtk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-hir.workspace = true
aivi-runtime = { path = "../aivi-runtime" }
gtk = { package = "gtk4", version = "0.11.1" }
libadwaita = { package = "libadwaita", version = "0.9", features = ["v1_3", "v1_4"] }

[dev-dependencies]
aivi-syntax.workspace = true

[lints]
workspace = true
