[package]
name = "aivi-hir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-openapi.workspace = true
aivi-syntax.workspace = true
aivi-typing.workspace = true
regex-syntax.workspace = true

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true

[[test]]
name = "patch_typecheck"
path = "tests/patch_typecheck.rs"
