[package]
name = "aivi-lsp"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base = { workspace = true }
aivi-syntax = { workspace = true }
aivi-hir = { workspace = true }
aivi-query = { path = "../aivi-query" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ropey = "1"
anyhow = "1"

[lints]
workspace = true
