[package]
name = "aivi-openapi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-typing.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
insta.workspace = true

[lints]
workspace = true
