[package]
name = "aivi-query"
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base = { workspace = true }
aivi-syntax = { workspace = true }
aivi-hir = { workspace = true }
aivi-typing = { workspace = true }
parking_lot = "0.12"
rustc-hash = { workspace = true }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"

[lints]
workspace = true
