[package]
name = "aivi-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-hir.workspace = true
aivi-typing.workspace = true
glib = "0.20.12"

[dev-dependencies]
aivi-syntax.workspace = true

[lints]
workspace = true
