[package]
name = "aivi-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-backend = { path = "../aivi-backend" }
aivi-core = { path = "../aivi-core" }
aivi-hir.workspace = true
aivi-typing.workspace = true
glib = "0.20.12"
serde_json = "1.0"
url = "2.5"

[dev-dependencies]
aivi-lambda = { path = "../aivi-lambda" }
aivi-syntax.workspace = true

[lints]
workspace = true
