[package]
name = "aivi-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
aivi-base.workspace = true
aivi-backend = { path = "../aivi-backend" }
aivi-core = { path = "../aivi-core" }
aivi-hir.workspace = true
aivi-lambda = { path = "../aivi-lambda" }
aivi-typing.workspace = true
gio = "0.22.2"
glib = "0.22.3"
serde.workspace = true
serde_json.workspace = true
regex = "1"
url = "2.5"
ureq = "2"
fastrand = "2"
base64 = "0.22"
sha2 = "0.10"
imap = "2.4"
mailparse = "0.15"
native-tls = "0.2"
secret-service = { version = "5.1.0", features = ["rt-async-io-crypto-rust"] }

[dev-dependencies]
aivi-syntax.workspace = true

[lints]
workspace = true
